# mishka_ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  api_key_manager.py  bot.py  config_loader.py  docker-compose.yml  gemini_client.py  implementation_plan.md  memory_manager.py  project_structure_to_json.py  requirements.txt  short_term_memory.py  task.md  utils.py  walkthrough_rag.md  yandex_embedder.py
.agent/rules/: 00-general.md  01-architecture.md  02-testing.md  project_manifest.md
.agent/workflows/: commit.md  create_tool.md  git_push.md  test_and_fix.md
data/: prompts.json.example  users.json.example
handlers/: common.py  conversation_logic.py  message_handler.py
handlers/admin_commands/: general_admin_commands.py  memory_commands.py  user_data_commands.py
handlers/user_commands/: general_commands.py
memory_components/: emotional_memory_handler.py  fact_extractor.py  long_term_memory_chromadb.py  user_data_manager.py
scripts/: start.sh
services/mishka-admin-backend/: Dockerfile  README.md  pyproject.toml  verify_admin_security.py  verify_configs.py
services/mishka-admin-backend/src/: auth.py  config.py  database.py  events.py  main.py  models.py  monitoring.py
services/mishka-admin-backend/tests/: test_auth.py
services/mishka-archivist/: Dockerfile  pyproject.toml
services/mishka-archivist/src/: log_handler.py  main.py
services/mishka-bot-gateway/: .coverage  Dockerfile  README.md  pyproject.toml
services/mishka-bot-gateway/src/: bot.py  main.py  rmq.py
services/mishka-bot-gateway/tests/: test_gateway.py  test_multimodal.py
services/mishka-brain/: .coverage  Dockerfile  README.md  pyproject.toml
services/mishka-brain/src/: config_manager.py  consumer.py  graph.py  log_handler.py  logger_config.py  main.py  producer.py  utils.py
services/mishka-brain/tests/: test_flow.py  test_graph.py  test_infra.py  test_tools.py
services/mishka-dreamer/: pyproject.toml
services/mishka-dreamer/src/: main.py
services/mishka-frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
services/mishka-frontend/src/: App.tsx  index.css  main.tsx
services/mishka-initiative/: Dockerfile  README.md  pyproject.toml  verify_initiative.py
services/mishka-initiative/src/: config.py  config_manager.py  consumer.py  logger_config.py  main.py  producer.py  rules.py
services/mishka-llm-provider/: .coverage  Dockerfile  README.md  check_models.py  pyproject.toml  verify_embeddings.py
services/mishka-llm-provider/src/: config.py  config_manager.py  key_manager.py  main.py
services/mishka-llm-provider/tests/: test_api.py  test_config.py
services/mishka-memory/: .coverage  Dockerfile  README.md  pyproject.toml  verify_rag.py
services/mishka-memory/src/: config.py  config_manager.py  database.py  log_handler.py  main.py  models.py  qdrant.py  redis_manager.py  schemas.py
services/mishka-memory/tests/: test_api.py
services/mishka-personality/: Dockerfile  pyproject.toml
services/mishka-personality/src/: database.py  main.py  models.py  schemas.py
src/: main.py
src/bot/: loader.py
src/bot/handlers/: basic.py  chat.py
src/bot/middlewares/: auth.py  user_sync.py
src/core/: config.py
src/core/ai/: client.py
src/database/: session.py
tests/: conftest.py
tools/: README.md
tools/browser/: Dockerfile  pyproject.toml
tools/media/: Dockerfile  pyproject.toml
tools/memory/: Dockerfile
tools/search/: Dockerfile  pyproject.toml
tools/weather/: Dockerfile  manifest.json  pyproject.toml
tools/weather/src/: main.py
(+21 files in other folders)
