[project]
name = "mishka-brain"
version = "0.1.0"
description = "Orchestrator service for Mishka AI"
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "langchain-core",
    "aio-pika",
    "httpx",
    "python-dotenv",
    "loguru"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock"
]
