[project]
name = "mishka-memory"
version = "0.1.0"
description = "Memory Service for Mishka AI"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "asyncpg",
    "redis",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "loguru",
    "qdrant-client"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "httpx",
    "testcontainers"
]
